--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "axios": "^1.6.8",
     "normalize-scss": "^8.0.0",
+    "primeicons": "^7.0.0",
     "primevue": "^3.50.0",
     "vue": "^3.4.21"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
     "sass": "^1.72.0",
+    "unplugin-vue-components": "^0.26.0",
     "vite": "^5.1.6"
   }
 }
