--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primevue": "^3.50.0",
-    "vue": "^3.4.21"
+    "vue": "^3.4.21",
+    "vue-axios": "^3.5.2",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
